User 4 API endpoints created
